welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono2:1: error: expected start of definition
override def run() {
         ^PictureMono2:3: error: Missing closing brace `}' assumed here
	baisseBrosse();
        ^PictureMono2:8: error: expected class or object definition
def FaireV(){
^PictureMono2:27: error: expected class or object definition
def FaireMotif(){
^